width: max-content fixed white space on about page

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+body {
+  width: max-content;
+}
+
 .App {
   text-align: center;
   background-image: url("./boxingring2.jpg");
-  color: red;
  }
  
 .homecontainer {
